setup/web-app/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: nginx-hello-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: default
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
