setup/web-app/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-hello-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway   # use Istio’s ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "test.librelab.online"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-hello-vs
  namespace: default
spec:
  hosts:
    - "test.librelab.online"
  gateways:
    - nginx-hello-gateway
  http:
    - route:
        - destination:
            host: nginx-hello
            port:
              number: 80
